Fixed brosur padding on mobile.

--- a/includes/styles/front-page.css
+++ b/includes/styles/front-page.css
@@ -430,7 +430,8 @@
   }
 }
 .brosur-inner > div:first-child {
-  background-color: #fff500;
+  padding: 2rem;
+  background-color: #cccccc;
   grid-area: form;
   display: flex;
   flex-direction: column;
